--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "vitest"
+    "test:unit": "vitest --config vitest.unit.config.js",
+    "test:int": "vitest --config vitest.int.config.js"
   },
   "repository": {
     "type": "git",
