--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test:unit": "vitest --config vitest.unit.config.js",
-    "test:int": "vitest --config vitest.int.config.js"
+    "test:int": "./tests/integration-tests.sh"
   },
   "repository": {
     "type": "git",
@@ -40,6 +40,8 @@
     "eslint-plugin-jsdoc": "^61.1.4",
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
+    "prisma": "^6.17.1",
+    "@prisma/client": "^6.17.1",
     "vitest": "^3.2.4"
   },
   "dependencies": {
